write doc api patient
